# Repaso-Primer-Parcial-PRGIII

./: CMakeLists.txt  Cola.h  Lista.h  Nodo.h  Pila.h  README.md
1-2/: main.cpp
1-3/: main.cpp
2-1/: main.cpp
2-2/: main.cpp
2-3/: main.cpp
2-4/: Lista2.h  main.cpp
2-5/: main.cpp
Recursividáh/1/: main.cpp
Recursividáh/2/: main.cpp
clases/: Lista.h  Pila.h
